<resources>
    <string name="app_name">Cloud Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_cloud_folders">Folders</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>

    <string name="settings_server">Server URL</string>
    <string name="settings_server_example">https://...</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_stars">******</string>
    <string name="settings_save">Save</string>
    <string name="settings_toast_saved">Saved</string>

    <string name="key_preference_file_key">cloud_gallery_settings</string>
    <string name="key_preference_server_url">server_url</string>
    <string name="key_preference_username">username</string>
    <string name="key_preference_password">password</string>

    <string name="title_menu_item_action_change_view">change view</string>

    <string name="text_placeholder_folder_name">Folder</string>
    <string name="text_placeholder_image_name">Image</string>
    <string name="text_button_show_gallery">Show</string>
    <string name="text_folder_browser_back">Back</string>
    <string name="title_activity_show_photo">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test_debug_fullscreen">FullscreenActivity</string>

</resources>
