<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.tmcrafz.cloudgallery.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.tmcrafz.cloudgallery.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_cloud_folders"
        android:name="org.tmcrafz.cloudgallery.ui.cloud_folders.CloudFolderFragment"
        android:label="@string/menu_cloud_folders"
        tools:layout="@layout/fragment_cloud_folder" />

    <fragment
        android:id="@+id/nav_albums"
        android:name="org.tmcrafz.cloudgallery.ui.albums.AlbumsFragment"
        android:label="@string/menu_albums"
        tools:layout="@layout/fragment_albums" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.tmcrafz.cloudgallery.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="org.tmcrafz.cloudgallery.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>