<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_server" />

    <EditText
        android:id="@+id/edit_text_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/settings_server_example" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_username" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/settings_username" />

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_password" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_save_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save" />

</LinearLayout>